--- a/about.css
+++ b/about.css
@@ -1,271 +1,296 @@
 * {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url("./asset/pemandangan.jpg");
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-image: url("./asset/pemandangan.jpg");
 }
 
 nav {
-  background-color: rgba(43, 48, 52, 0.667);
-  backdrop-filter: blur(5px);
-  height: 80px;
-  width: 100%;
+    background-color: rgba(43, 48, 52, 0.667);
+    backdrop-filter: blur(5px);
+    height: 80px;
+    width: 100%;
 }
 
 label.logo {
-  color: rgb(186, 186, 186);
-  font-size: 35px;
-  line-height: 80px;
-  margin-left: 50px;
-  font-weight: bold;
+    color: rgb(186, 186, 186);
+    font-size: 35px;
+    line-height: 80px;
+    margin-left: 50px;
+    font-weight: bold;
 }
 
 nav ul {
-  float: right;
-  margin-right: 20px;
+    float: right;
+    margin-right: 20px;
 }
 
 nav ul li {
-  display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
-}
-
-nav ul li a {
-  color: white;
-  font-size: 17px;
-  padding: 7px 13px;
-  border-radius: 3px;
-  text-transform: uppercase;
-}
-
-a.active,
-a:hover {
-  background-color: #343e47;
-  transition: 0.5s;
-}
-
-.checkbtn {
-  font-size: 30px;
-  color: white;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;
-}
-#check {
-  display: none;
-}
-
-#container {
-  width: auto;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 20px;
-  margin-bottom: 50px;
-}
-
-#about {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 30px;
-  margin-right: 20px;
-  margin-top: 20px;
-  font-size: 30px;
-}
-
-#profil {
-  width: auto;
-  margin-left: 30px;
-  margin-right: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  /* display: flex;
-    justify-content: flex-start; */
-  margin-top: 10px;
-}
-
-#data {
-  height: 360px;
-  width: 200px;
-  background-color: rgba(240, 248, 255, 0.496);
-  border-radius: 10px;
-  margin-right: 30px;
-}
-
-#data:hover {
-  height: 380px;
-  width: 220px;
-  background-color: #343e47;
-  color: #fff;
-  margin-right: 30px;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-top: 10px;
-  transition: all 0.1s;
-  border-radius: 10px;
-}
-
-img {
-  border-radius: 10px 10px 0 0;
-  width: 200px;
-  height: 200px;
-}
-
-img:hover {
-  border-radius: 5px;
-  width: 200px;
-  height: 200px;
-}
-
-h4 {
-  margin: 10px;
-  font-size: 11px;
-}
-p {
-  margin-left: 10px;
-  margin-top: none;
-  font-size: 11px;
-}
-
-@media (max-width: 952px) {
-  label.logo {
-    color: white;
-    font-size: 30px;
+    display: inline-block;
     line-height: 80px;
-    margin-left: 50px;
-    margin-right: 20px;
-    font-weight: bold;
-  }
-  #about {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 30px;
-    margin-top: 20px;
-    font-size: 25px;
-  }
-
-  #profil {
-    margin-left: 30px;
-    margin-right: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  #data {
-    height: 360px;
-    width: 200px;
-    background-color: gainsboro;
-    margin-right: 30px;
-    margin-bottom: 20px;
-  }
-  nav ul li a {
-    font-size: 16px;
-  }
-}
-@media (max-width: 700px) {
-  #profil {
-    margin-left: 30px;
-    margin-right: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  #about {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 30px;
-    margin-top: 20px;
-    font-size: 25px;
-  }
-
-  #data {
-    height: 360px;
-    width: 200px;
-    background-color: gainsboro;
-    margin-right: 30px;
-    margin-bottom: 20px;
-  }
+    margin: 0 5px;
 }
 
-@media (max-width: 480px) {
-  .checkbtn {
-    display: block;
-  }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all 0.5s;
-  }
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  nav ul li a {
-    font-size: 20px;
-  }
-  a:hover,
-  a.active {
-    background: none;
-    color: #0082e6;
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
 
-  #container {
-    /* width: 100%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+a.active, a:hover{
+    background-color: #343e47;
+    transition: .5s;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+
+
+
+#container{
+    width: auto;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
-  }
 
-  #profil {
-    margin-left: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
+}
 
-  #about {
-    display: flex;
-    justify-content: space-around;
+#about{
+    font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
+    margin-right: 20px;
     margin-top: 20px;
     font-size: 30px;
-  }
+    
+}
 
-  #data {
+
+#profil{
+    width: auto;
+    margin-left: 30px;
+    margin-right: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* display: flex;
+    justify-content: flex-start; */
+    margin-top: 10px;
+}
+
+#data{
     height: 360px;
     width: 200px;
-    background-color: gainsboro;
-    margin-bottom: 20px;
-    margin-right: 0;
-  }
+    background-color: rgba(240, 248, 255, 0.496);
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+#data:hover{
+    height: 380px;
+    width: 220px;
+    background-color: #343e47;
+    color: #fff;
+    margin-right: 30px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    transition: all .1s;
+    border-radius: 10px;
+    
+}
+
+img{
+    border-radius: 10px 10px 0 0;
+    width: 200px;
+    height: 200px;
+}
+
+img:hover{
+    border-radius: 5px;
+    width: 200px;
+    height: 200px;
+}
+
+
+
+
+
+
+h4{
+    margin: 10px;
+    font-size: 11px;
+}
+p{
+   margin-left: 10px;
+   margin-top: none; 
+   font-size: 11px;
+}
+
+
+
+
+
+
+@media(max-width:952px){
+    label.logo {
+        color: white;
+        font-size: 30px;
+        line-height: 80px;
+        margin-left: 50px;
+        margin-right: 20px;
+        font-weight: bold;
+    }
+    #about{
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: 30px;
+        margin-top: 20px;
+        font-size: 25px;
+        
+    }
+    
+    
+    #profil{
+        margin-left: 30px;
+        margin-right: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    
+    }
+
+    #data{
+        height: 360px;
+        width: 200px;
+        background-color: gainsboro;
+        margin-right: 30px;
+        margin-bottom: 20px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+
+   
+}
+@media(max-width:700px){
+    
+    #profil{
+        margin-left: 30px;
+        margin-right: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+    
+    }
+    #about{
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: 30px;
+        margin-top: 20px;
+        font-size: 25px;
+        
+    }
+
+    #data{
+        height: 360px;
+        width: 200px;
+        background-color: gainsboro;
+        margin-right: 30px;
+        margin-bottom: 20px;
+    }
+    
+}
+
+@media (max-width:480px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover,a.active{
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+    #container{
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 20px;
+        margin-bottom: 50px;
+    
+    }
+
+    #profil{
+        margin-left: 30px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    
+    }
+    
+    #about{
+        display: flex;
+        justify-content: space-around;
+        margin-left: 30px;
+        margin-top: 20px;
+        font-size: 30px;
+    }
+
+    #data{
+        height: 360px;
+        width: 200px;
+        background-color: gainsboro;
+        margin-bottom: 20px;
+        margin-right: 0;
+    }
 }
 
 #referensi {
-  margin-left: 30px;
-  margin-right: 20px;
-  margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 20px;
+    margin-top: 50px;
 }
-#referensi label {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-right: 20px;
-  margin-top: 20px;
-  font-size: 30px;
+#referensi label{
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 20px;
+    margin-top: 20px;
+    font-size: 30px;
 }
