--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   overflow-x: hidden;
   /* background-image: url("./asset/pixelBG.gif"); */
-  background-color: darkcyan;
+  background-image: url(./asset/pemandangan.jpg);
   background-size: cover;
 }
 
@@ -15,6 +15,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: rgba(43, 48, 52, 0.667);
+  height: 95px;
 }
 
 #navbar {
@@ -27,10 +29,9 @@ header {
   margin: 100px auto 0 auto;
   display: grid;
   background-image: url(./asset/pixelBG4.gif);
-  background-repeat: repeat-y;
-  border: 2px solid rgba(0, 0, 0, 0);
-  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0);border-radius: 10px;
   background-size: 100%;
+  height: 650px;
 }
 
 .shop-toggle {
@@ -72,6 +73,12 @@ header {
   justify-content: center;
   padding: 50px;
 }
+#characterpet img {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+}
 
 @media (max-width: 768px) {
   .shop-toggle {
@@ -87,8 +94,10 @@ header {
     margin: 100px auto 0 auto;
     display: grid;
     background-image: url(./asset/pixelBG4.gif);
-    background-repeat: repeat-y;
-    background-size: 100%;
+    background-size: 200%;
+    height: 400px;
+    border: 2px solid rgba(0, 0, 0, 0);border-radius: 10px;
+    margin-bottom:-150px;
   }
   #characterpet {
     width: 300px;
@@ -141,7 +150,7 @@ header {
 
 #navbar li:hover,
 #navbar li.active {
-  background-color: brown;
+  background-color: #343e47;
 }
 
 @media (max-width: 768px) {
@@ -150,7 +159,7 @@ header {
     position: fixed;
     z-index: 1000;
     inset: 0 0 0 40%;
-    background: hsl(0, 0%, 100%, 0.1);
+    background-color: rgba(43, 48, 52, 0.667);
     backdrop-filter: blur(1rem);
     flex-direction: column;
     padding: min(30vh, 10rem) 2em;
@@ -174,21 +183,21 @@ header {
   }
 }
 
-#duitid {
+#duitid{
   text-align: center;
   font-size: 40px;
 }
 
-button {
+button{
   border-radius: 10px;
   background-color: rgba(240, 248, 255, 0.496);
 }
-button:hover {
+button:hover{
   border-radius: 10px;
   background-color: rgb(240, 248, 255);
 }
 
-#upgrades {
+#upgrades{
   border: solid rgba(0, 0, 0, 0);
   border-radius: 10px;
   margin-top: 10px;
@@ -200,27 +209,26 @@ button:hover {
   text-align: center;
 }
 
-#shoptext {
+#shoptext{
   font-size: 70px;
   margin-top: -10px;
   margin-bottom: -20px;
 }
 
-.logo img {
+.logo img{
   width: 80px;
   margin-left: 20px;
 }
 
-.autoclicker button {
+.autoclicker button{
   margin-right: 10px;
   width: 100px;
 }
-.multiplier button {
+.multiplier button{
   margin-left: 10px;
   width: 100px;
 }
-
-#titletext {
+#titletext{
   margin-right: auto;
   color: white;
 }
