--- a/about.css
+++ b/about.css
@@ -7,22 +7,23 @@
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-image: url("./asset/pemandangan.jpg");
 }
 
 nav {
-    background: #0082e6;
-    height: 80px;
-    width: 100%;
+  background-color: rgba(43, 48, 52, 0.667);
+  backdrop-filter: blur(5px);
+  height: 80px;
+  width: 100%;
 }
 
 label.logo {
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    margin-left: 50px;
-    font-weight: bold;
+  color: rgb(186, 186, 186);
+  font-size: 35px;
+  line-height: 80px;
+  margin-left: 50px;
+  font-weight: bold;
 }
 
 nav ul {
@@ -36,7 +37,7 @@ nav ul li {
   margin: 0 5px;
 }
 
-nav ul li a {
+nav ul li a{
   color: white;
   font-size: 17px;
   padding: 7px 13px;
@@ -45,11 +46,11 @@ nav ul li a {
 }
 
 a.active, a:hover{
-    background: #1b9bff;
-    transition: .5s;
+  background-color: #343e47;
+  transition: .5s;
 }
 
-.checkbtn {
+.checkbtn{
   font-size: 30px;
   color: white;
   float: right;
@@ -58,63 +59,74 @@ a.active, a:hover{
   cursor: pointer;
   display: none;
 }
-#check {
+#check{
   display: none;
 }
 
-#container {
+
+
+#container{
   width: auto;
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 20px;
   margin-bottom: 50px;
+
 }
 
-#about {
+#about{
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 30px;
   margin-right: 20px;
   margin-top: 20px;
   font-size: 30px;
+  
 }
 
 
 #profil{
-    width: auto;
-    margin-left: 30px;
-    margin-right: 20px;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; */
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 10px;
+  width: auto;
+  margin-left: 30px;
+  margin-right: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* display: flex;
+  justify-content: flex-start; */
+  margin-top: 10px;
 }
 
 #data{
-    height: 360px;
-    width: 200px;
-    background-color: gainsboro;
-    margin-right: 30px;
+  height: 360px;
+  width: 200px;
+  background-color: rgba(240, 248, 255, 0.496);
+  border-radius: 10px;
+  margin-right: 30px;
 }
 
 #data:hover{
-    height: 380px;
-    width: 220px;
-    background-color: #343e47;
-    color: #fff;
-    margin-right: 30px;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-top: 10px;
-    transition: all .1s;
-    border-radius: 10px;
-    
+  height: 380px;
+  width: 220px;
+  background-color: #343e47;
+  color: #fff;
+  margin-right: 30px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+  transition: all .1s;
+  border-radius: 10px;
+  
 }
 
 img{
+  border-radius: 10px 10px 0 0;
+  width: 200px;
+  height: 200px;
+}
 
-    width: 200px;
-    height: 200px;
+img:hover{
+  border-radius: 5px;
+  width: 200px;
+  height: 200px;
 }
 
 
@@ -122,135 +134,163 @@ img{
 
 
 
-h4 {
+h4{
   margin: 10px;
   font-size: 11px;
 }
-p {
-  margin-left: 10px;
-  margin-top: none;
-  font-size: 11px;
+p{
+ margin-left: 10px;
+ margin-top: none; 
+ font-size: 11px;
 }
 
-@media (max-width: 952px) {
+
+
+
+
+
+@media(max-width:952px){
   label.logo {
-    color: white;
-    font-size: 30px;
-    line-height: 80px;
-    margin-left: 50px;
-    margin-right: 20px;
-    font-weight: bold;
+      color: white;
+      font-size: 30px;
+      line-height: 80px;
+      margin-left: 50px;
+      margin-right: 20px;
+      font-weight: bold;
   }
-  #about {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 30px;
-    margin-top: 20px;
-    font-size: 25px;
+  #about{
+      font-family: Arial, Helvetica, sans-serif;
+      margin-left: 30px;
+      margin-top: 20px;
+      font-size: 25px;
+      
+  }
+  
+  
+  #profil{
+      margin-left: 30px;
+      margin-right: 20px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+  
   }
 
-  #profil {
-    margin-left: 30px;
-    margin-right: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+  #data{
+      height: 360px;
+      width: 200px;
+      background-color: gainsboro;
+      margin-right: 30px;
+      margin-bottom: 20px;
+  }
+  nav ul li a{
+      font-size: 16px;
   }
 
-  #data {
-    height: 360px;
-    width: 200px;
-    background-color: gainsboro;
-    margin-right: 30px;
-    margin-bottom: 20px;
+ 
+}
+@media(max-width:700px){
+  
+  #profil{
+      margin-left: 30px;
+      margin-right: 20px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
+  
   }
-  nav ul li a {
-    font-size: 16px;
+  #about{
+      font-family: Arial, Helvetica, sans-serif;
+      margin-left: 30px;
+      margin-top: 20px;
+      font-size: 25px;
+      
+  }
+
+  #data{
+      height: 360px;
+      width: 200px;
+      background-color: gainsboro;
+      margin-right: 30px;
+      margin-bottom: 20px;
+  }
+  
+}
+
+@media (max-width:480px){
+  .checkbtn{
+      display: block;
+  }
+  ul{
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background: #2c3e50;
+      top: 80px;
+      left: -100%;
+      text-align: center;
+      transition: all .5s;
+  }
+  nav ul li{
+      display: block;
+      margin: 50px 0;
+      line-height: 30px;
+  }
+  nav ul li a{
+      font-size: 20px;
+  }
+  a:hover,a.active{
+      background: none;
+      color: #0082e6;
+  }
+  #check:checked ~ ul{
+      left: 0;
+  }
+
+  #container{
+      /* width: 100%; */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 50px;
+  
+  }
+
+  #profil{
+      margin-left: 30px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+  
+  }
+  
+  #about{
+      display: flex;
+      justify-content: space-around;
+      margin-left: 30px;
+      margin-top: 20px;
+      font-size: 30px;
+  }
+
+  #data{
+      height: 360px;
+      width: 200px;
+      background-color: gainsboro;
+      margin-bottom: 20px;
+      margin-right: 0;
   }
 }
-@media (max-width: 700px) {
-  #profil {
-    margin-left: 30px;
-    margin-right: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  #about {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 30px;
-    margin-top: 20px;
-    font-size: 25px;
-  }
 
-  #data {
-    height: 360px;
-    width: 200px;
-    background-color: gainsboro;
-    margin-right: 30px;
-    margin-bottom: 20px;
-  }
+#referensi {
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-top: 50px;
 }
-
-@media (max-width: 480px) {
-  .checkbtn {
-    display: block;
-  }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all 0.5s;
-  }
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  nav ul li a {
-    font-size: 20px;
-  }
-  a:hover,
-  a.active {
-    background: none;
-    color: #0082e6;
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
-
-  #container {
-    /* width: 100%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 50px;
-  }
-
-  #profil {
-    margin-left: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  #about {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 30px;
-    margin-top: 20px;
-    font-size: 30px;
-  }
-
-  #data {
-    height: 360px;
-    width: 200px;
-    background-color: gainsboro;
-    margin-bottom: 20px;
-    margin-right: 0;
-  }
+#referensi label{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-size: 30px;
 }
